# Pomodoroc

./: .gitignore  CMakeLists.txt  README.md  config.c  functions.c  functions.h  image.c  main.c  read_file.c  requirements.c  run.c
